<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:background="@drawable/egyptfull"
	android:orientation="vertical" >

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:text="@string/hello"
		android:textColor="#000000" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="match_parent"
		android:layout_height="174dp"
		android:text="@string/blank" />

	<TableLayout
		android:id="@+id/tableLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="166dp"
			android:src="@drawable/amun" />

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/button1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="charTalk"
				android:text="@string/talk" />

			<Button
				android:id="@+id/button2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="giveItem"
				android:text="@string/item" />

			<Button
				android:id="@+id/button3"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:onClick="returnMap"
				android:text="@string/mapS" />

		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TableRow>

		<TableRow
			android:id="@+id/tableRow3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TableRow>

		<TableRow
			android:id="@+id/tableRow4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TableRow>
	</TableLayout>

</LinearLayout>
